--- a/vuejs/vue-example/src/assets/base.css
+++ b/vuejs/vue-example/src/assets/base.css
@@ -69,3 +69,13 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+hr {
+    margin: 20px 0;
+}
+
+input[type="text"] {
+    padding: 5px 10px;
+    border-radius: 6px;
+    width: 300px;
+}
