--- a/vuejs/vue-example/src/assets/main.css
+++ b/vuejs/vue-example/src/assets/main.css
@@ -3,7 +3,7 @@
 #app {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 2rem;
+    /*padding: 2rem;*/
     font-weight: normal;
 }
 
@@ -12,7 +12,6 @@ a,
     text-decoration: none;
     color: hsla(160, 100%, 37%, 1);
     transition: 0.4s;
-    padding: 3px;
 }
 
 @media (hover: hover) {
